making shorten url as clickable

--- a/app/views/links/_links.html.erb
+++ b/app/views/links/_links.html.erb
@@ -1,13 +1,13 @@
 <% if links %>
   <table>
     <tr>
-      <th>Lookup Code</th>
-      <th>URL</th>
+      <th>Shorten URL</th>
+      <th>Original URL</th>
       <th>Clicks</th>
     </tr>
     <% links.each do |link| %>
       <tr>
-        <td><%= link.lookup_code %></td>
+        <td><%= link_to link.shortened_url, link.shortened_url, target: '_blank' %></td>
         <td><%= link.original_url %></td>
         <td><%= link.count %></td>
       </tr>
